# pluto-website

./: .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  index.rs.html  package-lock.json  package.json  tailwind.config.cjs
public/styles/: fonts.css  style.css
src/components/: Head.astro  Menu.vue  MenuWrapper.astro  Minimap.vue  NavBar.vue  Search.vue  Stats.vue
src/pluto_website_backend/: Cargo.toml
src/pluto_website_backend/src/: bootstrap.rs  build.rs  compiled.rs  controller.rs  lib.rs
src/pluto_website_backend/views/: index.rs.html
src/pluto_website_backend/views/_astro/: Menu.daa14378.js  Minimap.a2345f3b.css  Minimap.ad6fb8d7.js  NavBar.5d5d8abf.js  SUMMARY.68b3370a.css  Stats.82049739.js  client.537fc49b.js  index.f8f934a3.css  runtime-core.esm-bundler.5f2d4180.js  runtime-dom.esm-bundler.f6687bb7.js  scroll.8c923fed.js
src/pluto_website_backend/views/docs/: index.html
src/pluto_website_backend/views/docs/SUMMARY/: index.html
src/pluto_website_backend/views/docs/advanced/: index.html
src/pluto_website_backend/views/docs/advanced/one/: index.html
src/pluto_website_backend/views/docs/getting_started/: index.html
src/pluto_website_backend/views/docs/getting_started/runing_examples/: index.html
src/pluto_website_backend/views/docs/overview/: index.html
src/pluto_website_backend/views/docs/rest_apis/: index.html
src/pluto_website_backend/views/docs/rest_apis/one/: index.html
src/pluto_website_backend/views/docs/rest_apis/three/: index.html
src/pluto_website_backend/views/docs/rest_apis/two/: index.html
(+35 files in other folders)
