[package]
name = "pluto_website_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13.1"
pluto = { git = "https://github.com/pu0238/pluto.git" }
mime = "0.3.17"

[build-dependencies]
pluto_templating = { git = "https://github.com/pu0238/pluto.git" }