[package]
name = "pluto_website_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13.1"
pluto = { path = "../../../pluto/plutonium/src/pluto" }
mime = "0.3.17"
serde_json = "1.0.108"

[build-dependencies]
pluto_templating = { path = "../../../pluto/plutonium/src/pluto_templating" }